--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -12,13 +12,17 @@
 
 html{
     font-size: 62.5%;
+    -webkit-text-size-adjust: 100%;
+    font-family: "Inter", sans-serif;
 }
 
 a{
     text-decoration: none;
+   
 }
 
 ul,
 ol{
     list-style: none;
 }
+
